package edu.guia.solid.srp.strategy;

public interface DiscountStrategy {
    double apply(double total);
}
