package edu.guia.solid.srp.strategy;

public class VipDiscount implements DiscountStrategy { public double apply(double t){ return t * 0.85; } }

